--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,14 +12,13 @@ name = "cropper"
 path = "src/main.rs"
 
 [dependencies]
-tauri = { version = "2", features = ["macos-private-api"] }
+tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25"
 base64 = "0.22"
-window-vibrancy = "0.6"
 
 [dev-dependencies]
 tempfile = "3"
